# video-summarizer

./: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 644ad6bf2b29_create_model_tables.py  6bf414009c12_foreignkey_model_tables.py  e4d59114e4c5_foreignkey_model_tables.py
frontend/: package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AuthFormContainer.tsx  AuthGuard.tsx  ExportButtons.tsx  InputField.tsx  Layout.tsx  LoadingSpinner.tsx  Navbar.tsx
frontend/src/contexts/: AuthContext.tsx  DarkModeContext.tsx
frontend/src/pages/: AdminDashboard.tsx  Login.tsx  Register.tsx  SummaryView.tsx  TranscriptionView.tsx  UserDashboard.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
src/analytics/: bootstrap.py
src/analytics/application/: analytics_queries.py  analytics_service.py
src/analytics/config/: settings.py
src/auth/: bootstrap.py  container.py  dependencies.py
src/auth/api/: dependencies.py  (+2 more)
src/metrics/: bootstrap.py
src/notifications/: bootstrap.py
src/shared/: container.py  dependencies.py
src/summarization/: bootstrap.py
src/transcription/: bootstrap.py
src/video_management/: bootstrap.py  container.py  dependencies.py
tests/e2e/: test_full_flow.py
tests/integration/: test_video_routes.py  test_video_transcription.py
tests/mocks/: in_memory_event_bus.py  in_memory_storage.py  in_memory_transcription_repository.py  in_memory_video_repository.py
tests/unit/: test_local_storage_service.py
tests/utils/: db.py
(+129 files in other folders)
